whitespace fix?

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -207,8 +207,11 @@
   }
 }
 
-.home-page {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+.home-page:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
 }
