--- a/src/components/SkillsPage/SkillsPage.css
+++ b/src/components/SkillsPage/SkillsPage.css
@@ -82,9 +82,9 @@
     margin-left: 15px;
   }
   .skills-img {
-    max-width: 50px;
-    max-height: 50px;
-    min-width: 50px;
-    min-height: 50px;
+    max-width: 40px;
+    max-height: 40px;
+    min-width: 40px;
+    min-height: 40px;
   }
 }
